force-app/main/default/objects/Activity/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action of the Validate Email Comments Task</description>
    <formula>IF( ISPICKVAL( Process__c ,&apos;Validate Email Comments&apos;) ,&apos;Please review the linked email for any additional required action.&apos; ,&apos;&apos; )</formula>
    <label>Action</label>
    <type>Text</type>
</CustomField>