force-app/main/default/objects/Activity/fields/Alternate_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Email__c</fullName>
    <description>To capture Alternate Contact Email</description>
    <label>Alternate Contact Email</label>
    <type>Email</type>
</CustomField>