force-app/main/default/objects/Activity/fields/Alternate_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Number__c</fullName>
    <description>To capture Alternate Contact Number</description>
    <label>Alternate Contact Number</label>
    <type>Phone</type>
</CustomField>