force-app/main/default/objects/Activity/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <description>SDT-18823, ANI detail will capture from IVR Call.</description>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>