force-app/main/default/objects/Activity/fields/Approval_Log__c.field-meta.xml
<CustomField>
    <fullName>Approval_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to display the corresponding Approval Log</description>
    <label>Approval Log</label>
    <referenceTo>Approval_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>