force-app/main/default/objects/Activity/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <description>Stores Approver in case of multiple approvers</description>
    <label>External Approver Name / User</label>
    <length>200</length>
    <type>Text</type>
</CustomField>