force-app/main/default/objects/Activity/fields/Auto_Approval_OSA__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_OSA__c</fullName>
    <formula>IF( AND(ISPICKVAL( Process__c , &apos;Obtain Service Approval&apos;),
 Business_Rule__r.Is_Auto_Email__c  ) , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Approval OSA</label>
    <type>Text</type>
</CustomField>