force-app/main/default/objects/Activity/fields/Business_Rule__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Rule that applies to the task</description>
    <label>Business Rule</label>
    <referenceTo>Business_Rule__c</referenceTo>
    <relationshipLabel>Task</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>