force-app/main/default/objects/Activity/fields/Case_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_By__c</fullName>
    <label>Case Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>