force-app/main/default/objects/Activity/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <description>This field holds the Contact&apos;s Department</description>
    <label>Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>