force-app/main/default/objects/Activity/fields/Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time__c</fullName>
    <description>SDT 4418-- to store due date along with time</description>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>