force-app/main/default/objects/Activity/fields/Follow_Up_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Reasons__c</fullName>
    <label>Follow Up Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Internal WM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>