force-app/main/default/objects/Activity/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <description>Used to link duplicate tasks</description>
    <label>Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>