force-app/main/default/objects/Activity/fields/If_Required__c.field-meta.xml
<CustomField>
    <fullName>If_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If Required?</label>
    <type>Checkbox</type>
</CustomField>