force-app/main/default/objects/Activity/fields/Initial_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Assignment__c</fullName>
    <label>Initial Assignment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>