force-app/main/default/objects/Activity/fields/Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Interaction_ID__c</fullName>
    <description>Field holding Id of Genesis last customer interaction id.  SDT 4273</description>
    <externalId>true</externalId>
    <label>Interaction ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>