force-app/main/default/objects/Activity/fields/Is_a_New_Work_Order_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_a_New_Work_Order_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if a new WO is required after this task is completed</description>
    <label>Is a New Work Order Needed?</label>
    <type>Checkbox</type>
</CustomField>