force-app/main/default/objects/Activity/fields/Is_Alternate_Contact_Provided__c.field-meta.xml
<CustomField>
    <fullName>Is_Alternate_Contact_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether Resolve Service Issue is created from the outcome of Escalation Unresponsive Contact Customer Task.</description>
    <label>Is Alternate Contact Provided</label>
    <type>Checkbox</type>
</CustomField>