force-app/main/default/objects/Activity/fields/Is_Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_To_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>