force-app/main/default/objects/Activity/fields/Is_Attempt_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Attempt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Attempt Created</label>
    <type>Checkbox</type>
</CustomField>