force-app/main/default/objects/Activity/fields/Is_From_ScreenPop__c.field-meta.xml
<CustomField>
    <fullName>Is_From_ScreenPop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to identify if task owner is changed from screen pop. Then genesys cancel routing will be prevented</description>
    <label>Is From ScreenPop</label>
    <type>Checkbox</type>
</CustomField>