force-app/main/default/objects/Activity/fields/Is_Genesys_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Genesys_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether Task is assigned to Genesys Integration or not.</description>
    <label>Is Genesys User</label>
    <type>Checkbox</type>
</CustomField>