force-app/main/default/objects/Activity/fields/Is_GR_byPendingInfoTask__c.field-meta.xml
<CustomField>
    <fullName>Is_GR_byPendingInfoTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Genesys Routing created by Pending Info Task</description>
    <label>Is GR by Pending Info Task</label>
    <type>Checkbox</type>
</CustomField>