force-app/main/default/objects/Activity/fields/Is_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Is_Outcome__c</fullName>
    <formula>ISBLANK(TEXT(Outcome__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Outcome</label>
    <type>Checkbox</type>
</CustomField>