force-app/main/default/objects/Activity/fields/Is_Stop_Task_Creation__c.field-meta.xml
<CustomField>
    <fullName>Is_Stop_Task_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stop Task Creation</label>
    <type>Checkbox</type>
</CustomField>