force-app/main/default/objects/Activity/fields/IsAcornCase__c.field-meta.xml
<CustomField>
    <fullName>IsAcornCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the task is related to Acorn Case</description>
    <label>IsAcornCase</label>
    <type>Checkbox</type>
</CustomField>