force-app/main/default/objects/Activity/fields/isSystemGenerated__c.field-meta.xml
<CustomField>
    <fullName>isSystemGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSystemGenerated</label>
    <type>Checkbox</type>
</CustomField>