force-app/main/default/objects/Activity/fields/Last_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the agent who handled the previous attempt</description>
    <label>Last Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>