force-app/main/default/objects/Activity/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link to the incoming email record</description>
    <label>Link</label>
    <length>18</length>
    <type>Text</type>
</CustomField>