force-app/main/default/objects/Activity/fields/Link_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Email__c</fullName>
    <description>Link to Email Record</description>
    <formula>IF(NoT(ISBLANK(Link__c)),HYPERLINK(&quot;/&quot; &amp; Link__c, &apos;Email To Validate&apos;), &apos;&apos;)</formula>
    <label>Link to Email</label>
    <type>Text</type>
</CustomField>