force-app/main/default/objects/Activity/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Field to contain emailmessage Id</description>
    <label>Message ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>