force-app/main/default/objects/Activity/fields/min__c.field-meta.xml
<CustomField>
    <fullName>min__c</fullName>
    <formula>LastModifiedDate  -  0.0402</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 min</label>
    <type>DateTime</type>
</CustomField>