force-app/main/default/objects/Activity/fields/MultiCaseId__c.field-meta.xml
<CustomField>
    <fullName>MultiCaseId__c</fullName>
    <description>To group the Approval Task as per the case details</description>
    <label>MultiCaseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>