force-app/main/default/objects/Activity/fields/Next_Attempt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt_Date_Time__c</fullName>
    <label>Next Attempt Date Time</label>
    <type>DateTime</type>
</CustomField>