force-app/main/default/objects/Activity/fields/Next_Task_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Due_Date_Time__c</fullName>
    <description>SDT-24577</description>
    <label>Next Task Due Date Time</label>
    <type>DateTime</type>
</CustomField>