force-app/main/default/objects/Activity/fields/Non_Chargeable_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Non_Chargeable_Recovery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Chargeable Recovery</label>
    <type>Checkbox</type>
</CustomField>