force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>possible outcomes for the work item</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Process__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Accepts New Date</fullName>
            </value>
            <value>
                <fullName>Customer Accepts Status</fullName>
            </value>
            <value>
                <fullName>Customer Disputes Status</fullName>
            </value>
            <value>
                <fullName>Customer Requests Cancellation</fullName>
            </value>
            <value>
                <fullName>Information Not Obtained</fullName>
            </value>
            <value>
                <fullName>Information Obtained</fullName>
            </value>
            <value>
                <fullName>New ETA Provided</fullName>
            </value>
            <value>
                <fullName>No Response/Pending Response</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Request Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Request Not Approved</label>
            </value>
            <value>
                <fullName>Schedule Confirmed</fullName>
            </value>
            <value>
                <fullName>Service Confirmed</fullName>
            </value>
            <value>
                <fullName>Service Dispatched</fullName>
            </value>
            <value>
                <fullName>Service Error</fullName>
            </value>
            <value>
                <fullName>Service Not Confirmed</fullName>
            </value>
            <value>
                <fullName>Service Not Performed</fullName>
            </value>
            <value>
                <fullName>Service Rescheduled</fullName>
            </value>
            <value>
                <fullName>Vendor Available</fullName>
            </value>
            <value>
                <fullName>Vendor Unavailable</fullName>
            </value>
            <value>
                <fullName>Customer Notified of Decline</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Verified and Request Approved</fullName>
            </value>
            <value>
                <fullName>Verified and Request Not Approved</fullName>
            </value>
            <value>
                <fullName>Could not verify</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Service Date Change</fullName>
            </value>
            <value>
                <fullName>Vendor Accepts Work Order</fullName>
            </value>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
            <value>
                <fullName>Reviewed - Action Required</fullName>
            </value>
            <value>
                <fullName>Reviewed - No Action Required</fullName>
            </value>
        </valueSetDefinition>
        
    </valueSet>
</CustomField>