force-app/main/default/objects/Activity/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>The preferred channel to contact</description>
    <label>Preferred Contact Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>