force-app/main/default/objects/Activity/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm Service Completion</fullName>
            </value>
            <value>
                <fullName>Confirm Vendor Availability</fullName>
            </value>
            <value>
                <fullName>Escalation Confirm Service Completion</fullName>
            </value>
            <value>
                <fullName>Escalation Confirm Vendor Availability</fullName>
            </value>
            <value>
                <fullName>Escalation Obtain Customer Info</fullName>
            </value>
            <value>
                <fullName>Escalation Obtain Vendor Information</fullName>
            </value>
            <value>
                <fullName>Manually Dispatch</fullName>
            </value>
            <value>
                <fullName>Master Intake</fullName>
            </value>
            <value>
                <fullName>Notify Customer Of Delay</fullName>
            </value>
            <value>
                <fullName>Notify Customer Of Service Update</fullName>
            </value>
            <value>
                <fullName>Obtain Customer Info</fullName>
            </value>
            <value>
                <fullName>Obtain Schedule Confirmation</fullName>
            </value>
            <value>
                <fullName>Obtain Vendor Update</fullName>
            </value>
            <value>
                <fullName>Obtain Service Approval</fullName>
            </value>
            <value>
                <fullName>Corporate Contact Approval</fullName>
            </value>
            <value>
                <fullName>Account Title Approval</fullName>
            </value>
            <value>
                <fullName>Escalation Emergency Case</fullName>
            </value>
            <value>
                <fullName>Notify Customer of Decline</fullName>
            </value>
            <value>
                <fullName>Escalation Obtain Service Approval</fullName>
            </value>
            <value>
                <fullName>Confirm Service Completion with Location</fullName>
            </value>
            <value>
                <fullName>Validate Email Approval Response</fullName>
            </value>
            <value>
                <fullName>Set Customer&apos;s Service Guarantees</fullName>
            </value>
            <value>
                <fullName>Service Guarantees Approval</fullName>
            </value>
            <value>
                <fullName>Rejected Work Order</fullName>
            </value>
            <value>
                <fullName>Escalation Rejected Work Order</fullName>
            </value>
            <value>
                <fullName>Validate Email Comments</fullName>
            </value>
            <value>
                <fullName>Multi Case Approval Task</fullName>
            </value>
            <value>
                <fullName>Case Assignment</fullName>
            </value>
            <value>
                <fullName>Resolve Service Issue</fullName>
            </value>
            <value>
                <fullName>Escalation Unresponsive Contact Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>