force-app/main/default/objects/Activity/fields/Profile_Number__c.field-meta.xml
<CustomField>
    <fullName>Profile_Number__c</fullName>
    <description>Profile Number of the case</description>
    <label>Profile Number #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>