force-app/main/default/objects/Activity/fields/Proposed_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Service_Date__c</fullName>
    <label>Proposed Service Date</label>
    <type>Date</type>
</CustomField>