force-app/main/default/objects/Activity/fields/Reached_out_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reached_out_to_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reached out to Contact</label>
    <type>Checkbox</type>
</CustomField>