force-app/main/default/objects/Activity/fields/Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Date__c</fullName>
    <label>Reschedule Date</label>
    <type>Date</type>
</CustomField>