force-app/main/default/objects/Activity/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>The reason why a certain outcome has been selected</description>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Refused</fullName>
            </value>
            <value>
                <fullName>Changed of Service Date</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Container Overloaded</fullName>
            </value>
            <value>
                <fullName>Container Blocked</fullName>
            </value>
            <value>
                <fullName>Container Contaminated</fullName>
            </value>
            <value>
                <fullName>Wrong Container</fullName>
            </value>
            <value>
                <fullName>Carryover</fullName>
            </value>
            <value>
                <fullName>Vendor did not have on schedule</fullName>
            </value>
            <value>
                <fullName>Stop Service (New PO needed after payment issue s resolve)</fullName>
            </value>
            <value>
                <fullName>Container not ready</fullName>
            </value>
            <value>
                <fullName>Wrong Vendor on site</fullName>
            </value>
            <value>
                <fullName>Vendor Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>