force-app/main/default/objects/Activity/fields/RunFlowAtTime__c.field-meta.xml
<CustomField>
    <fullName>RunFlowAtTime__c</fullName>
    <description>This will carry the time at which delay work to be performed in Task Flow!</description>
    <label>RunFlowAtTime</label>
    <type>DateTime</type>
</CustomField>