force-app/main/default/objects/Activity/fields/RunFlowName__c.field-meta.xml
<CustomField>
    <fullName>RunFlowName__c</fullName>
    <label>RunFlowName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Task FrameWork Process</fullName>
            </value>
            <value>
                <fullName>Task delay SLA process</fullName>
            </value>
            <value>
                <fullName>Process of Non Pickup Task framework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>