force-app/main/default/objects/Activity/fields/Service_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Service_Approvers__c</fullName>
    <label>Service Approvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>