force-app/main/default/objects/Activity/fields/Service_Classification__c.field-meta.xml
<CustomField>
    <fullName>Service_Classification__c</fullName>
    <label>Service Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>