force-app/main/default/objects/Activity/fields/SFDC_Genesys_Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Genesys_Service_Flag__c</fullName>
    <label>SFDC Genesys Service Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>