force-app/main/default/objects/Activity/fields/SFDC_Genesys_User__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Genesys_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC Genesys User</label>
    <type>Checkbox</type>
</CustomField>