force-app/main/default/objects/Activity/fields/SFDC_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Team_Name__c</fullName>
    <label>SFDC Team Name</label>
    <type>TextArea</type>
</CustomField>