force-app/main/default/objects/Activity/fields/Sys_Created_From__c.field-meta.xml
<CustomField>
    <fullName>Sys_Created_From__c</fullName>
    <description>System field created for SDT-40723 to identify task created from Platform Event</description>
    <label>Sys Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created from PE Trigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>