force-app/main/default/objects/Activity/fields/Task_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Team_Name__c</fullName>
    <description>DT - Case team name assignment to be used in Acorn (SDT-11777).</description>
    <label>Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Name</valueSetName>
    </valueSet>
</CustomField>