force-app/main/default/objects/Activity/fields/Task_Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>Task_Team_Queue__c</fullName>
    <description>DT - Case team queue assignment to be used in Acorn (SDT-11777).</description>
    <label>Team Queue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Team_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Queue</valueSetName>
    </valueSet>
</CustomField>