force-app/main/default/objects/Activity/fields/TaskFrameworkId__c.field-meta.xml
<CustomField>
    <fullName>TaskFrameworkId__c</fullName>
    <label>TaskFrameworkId</label>
    <type>TextArea</type>
</CustomField>