force-app/main/default/objects/Activity/fields/TaskFromEmail__c.field-meta.xml
<CustomField>
    <fullName>TaskFromEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TaskFromEmail</label>
    <type>Checkbox</type>
</CustomField>