force-app/main/default/objects/Activity/fields/tz__Local_Time__c.field-meta.xml
<CustomField>
    <fullName>tz__Local_Time__c</fullName>
    <description>Shows the current local time for the related record (Lead, Contact etc.). This field is meant to be used on the Task record.</description>
    <formula>IF(ISBLANK(tz__UTC_Offset__c), 
&quot;Unknown&quot;, 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp; 
LEFT( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp; 
TEXT( 
IF( 
OR( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 12 
), 
12, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp;&quot;:&quot;&amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 15, 2 ) 
&amp;&quot; &quot;&amp; 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
) 
&amp; &quot; &quot; &amp; 
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;) 
)</formula>
    <inlineHelpText>Shows the local time for the related Lead or Contact.</inlineHelpText>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>