force-app/main/default/objects/Activity/fields/tz__UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>tz__UTC_Offset__c</fullName>
    <description>UTC timezone offset for the related record (Lead, Contact etc.).</description>
    <inlineHelpText>Shows the UTC timezone offset of the Lead / Contact associated with the task.</inlineHelpText>
    <label>UTC Offset</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>