force-app/main/default/objects/Activity/fields/User_Categorization__c.field-meta.xml
<CustomField>
    <fullName>User_Categorization__c</fullName>
    <label>User Categorization</label>
    <type>TextArea</type>
</CustomField>