force-app/main/default/objects/Activity/fields/User_Categorization_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Categorization_Code__c</fullName>
    <label>User Categorization Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>