force-app/main/default/objects/Activity/fields/WO_Accepted_Comments__c.field-meta.xml
<CustomField>
    <fullName>WO_Accepted_Comments__c</fullName>
    <description>This field is used to capture comments when a workorder is accepted</description>
    <label>WO Accepted/ Rejected Comments</label>
    <type>TextArea</type>
</CustomField>